package dev.alro127.tasksense.domain.entity;

import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import dev.alro127.tasksense.domain.enums.JoinRequestStatus;

import java.time.OffsetDateTime;

@Entity
@Table(name = "workspace_join_requests", uniqueConstraints = {
                @UniqueConstraint(columnNames = { "workspace_id", "user_id" })
})
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class WorkspaceJoinRequestEntity {

        @Id
        @GeneratedValue(strategy = GenerationType.IDENTITY)
        private Long id;

        @ManyToOne(fetch = FetchType.LAZY)
        @JoinColumn(name = "workspace_id", nullable = false)
        private WorkspaceEntity workspace;

        @ManyToOne(fetch = FetchType.LAZY)
        @JoinColumn(name = "user_id", nullable = false)
        private UserEntity user;

        @Column(nullable = false, length = 50)
        @Enumerated(EnumType.STRING)
        @Builder.Default
        private JoinRequestStatus status = JoinRequestStatus.PENDING;

        @Column(columnDefinition = "TEXT")
        private String message;

        @ManyToOne(fetch = FetchType.LAZY)
        @JoinColumn(name = "reviewed_by")
        private UserEntity reviewedBy;

        private OffsetDateTime reviewedAt;

        @Column(name = "created_at", updatable = false)
        @CreationTimestamp
        private OffsetDateTime createdAt;

        @Column(name = "updated_at")
        @UpdateTimestamp
        private OffsetDateTime updatedAt;
}