erDiagram
    %% =====================================================================
    %% LOGICAL/CONCEPTUAL ERD (HIGH-LEVEL BUSINESS MODEL)
    %% =====================================================================

    %% User & Security Module
    users ||--o{ user_skills : "has skills"
    users ||--o{ team_templates : "owns team templates"
    team_templates }o--o{ users : "includes members"

    %% Workspace & Collaboration Module
    users ||--o{ workspaces : "owns workspaces"
    workspaces ||--o{ workspace_members : "contains"
    users ||--o{ workspace_members : "joined as member"
    workspaces ||--o{ workspace_join_requests : "receives requests"
    users ||--o{ workspace_join_requests : "submits join request"
    users |o--o{ workspace_join_requests : "reviews join request"
    workspaces ||--o{ workspace_invites : "sends invites"
    users ||--o{ workspace_invites : "created invite"

    %% Project & Sprint Module
    workspaces ||--o{ projects : "contains projects"
    projects ||--o{ project_members : "contains"
    users ||--o{ project_members : "joined as member"
    projects ||--o{ project_join_requests : "receives requests"
    users ||--o{ project_join_requests : "submits join request"
    users |o--o{ project_join_requests : "reviews join request"
    projects ||--o{ sprints : "sprints configured"
    users ||--o{ sprints : "sprint created by"

    %% Task & Tag Module
    projects ||--o{ tasks : "has tasks"
    tasks |o--o{ tasks : "parent of subtask"
    sprints |o--o{ tasks : "assigned in sprint"
    users ||--o{ tasks : "created task"
    tasks }o--o{ users : "assigned to"
    projects ||--o{ tags : "defines tags"
    tasks }o--o{ tags : "tagged with"
    tasks ||--o{ attachments : "has attachments"
    users ||--o{ attachments : "uploaded attachment"

    %% Comment & Social Module
    tasks ||--o{ comments : "has discussion comments"
    users ||--o{ comments : "authored comment"
    comments |o--o{ comments : "reply to comment"
    comments }o--o{ users : "mentions user"
    comments }o--o{ users : "reacted by"

    %% Workflow & Guidance Module
    projects ||--o{ workflows : "references source project"
    workflows |o--o{ projects : "source workflow for project"
    users ||--o{ workflows : "created workflow"
    workflows ||--o{ workflow_steps : "contains steps"
    sprints |o--o{ workflow_steps : "linked to source sprint"
    workflow_steps }o--o{ tasks : "maps task templates"
    workflows ||--o{ workflow_ratings : "receives ratings"
    users ||--o{ workflow_ratings : "rated by user"
    workflows ||--o{ workflow_favorites : "favorited by"
    users ||--o{ workflow_favorites : "favorited workflow"
    workflows ||--o{ workflow_comments : "has comments"
    users ||--o{ workflow_comments : "authored workflow comment"
    workflow_comments |o--o{ workflow_comments : "reply to comment"
    workflow_comments }o--o{ users : "mentions user"
    workflow_comments }o--o{ users : "reacted by"
    workflows ||--o{ workflow_guidance : "generates guidance spec"
    users |o--o{ workflow_guidance : "manually edited by"

    %% Project Guidance Tracking
    projects ||--o| project_guidance_progress : "has guidance tracker"
    workflow_guidance ||--o{ project_guidance_progress : "drives progress"
    project_guidance_progress ||--o{ project_guidance_target : "tracks target goals"

    %% System & Chat Module
    users ||--o{ notifications : "receives notifications"
    users ||--o{ chat_sessions : "starts session"
    chat_sessions ||--o{ chat_messages : "contains messages"
